--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-  <h1>heading1</h1>
-  <h2>heading2</h2>
-  <h3>heading3</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis blanditiis harum temporibus modi! Perspiciatis hic velit dolore adipisci illo.</p>
+<a href="#" class="link-arrow">learn more</a>
 </body>
 </html>
