--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <script src="https://kit.fontawesome.com/083d8d2922.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<span class="badge badge--primary">10%off</span>
+  <ul class="list list--tick">
+    <li class="list__item"><i></i> item 1</i>
+    <li class="list__item"><i></i> item 2</i>
+    <li class="list__item"><i></i> item 3</li>
+  </ul>
 </body>
 </html>
