--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <script src="https://kit.fontawesome.com/083d8d2922.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <ul class="list list--tick">
-    <li class="list__item"><i></i> item 1</i>
-    <li class="list__item"><i></i> item 2</i>
-    <li class="list__item"><i></i> item 3</li>
-  </ul>
+  <span class="icon-container">
+    <svg class="icon">
+      <use xlink:href="icons/sprite.svg#wordpress"></use>
+    </svg>
+  </span>
 </body>
 </html>
