--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-  <span class="icon-container">
-    <svg class="icon">
-      <use xlink:href="icons/sprite.svg#wordpress"></use>
-    </svg>
-  </span>
+  <button class="btn btn--primary btn--block">Buy now</button>
+  <a href="#" class="btn btn--secondary btn--block">Buy now</a>
 </body>
 </html>
