--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-  <button class="btn btn--primary btn--block">Buy now</button>
-  <a href="#" class="btn btn--secondary btn--block">Buy now</a>
+  <input type="text" class="input" placeholder="Enter domain name here">
 </body>
 </html>
