--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-  <div class="input-group">
-    <button class="btn btn--accent">Search</button>
-    <input type="text" class="input" placeholder="Enter domain name here">
+<div style="width: 30%;padding: 4rem;">
+  <div class="card card--primary">
+    <header class="card__header">card title</header>
+    <div class="card__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
   </div>
+</div>
 </body>
 </html>
