--- a/index.html
+++ b/index.html
@@ -11,11 +11,27 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<div style="width: 30%;padding: 4rem;">
-  <div class="card card--primary">
-    <header class="card__header">card title</header>
-    <div class="card__body">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+  <div class="plan plan--popular">
+    <div style="width: 45%;padding: 4rem;">
+      <div class="card card--secondary">
+        <header class="card__header">
+          <h3 class=plan__name>Entry</h3>
+          <span class="plan__price">$14</span>
+          <span class="plan__billing-cycle">/month</span>
+          <span class="badge badge--secondary badge--small">10% OFF</span>
+          <span class="plan__description">Easy start on the cloud</span>
+        </header>
+        <div class="card__body">
+          <ul class="list list--tick">
+            <li class="list__item"><i></i> item 1</i>
+            <li class="list__item"><i></i> item 2</i>
+            <li class="list__item"><i></i> item 3</li>
+            <li class="list__item"><i></i> item 3</li>
+          </ul>
+          <button class="btn btn--outline btn--block">Buy now</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
 </body>
 </html>
