--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-  <div class="media">
-    <div class="media__image">
-        <svg class="icon">
-          <use xlink:href="icons/sprite.svg#snap"></use>
-        </svg>
-    </div>
-    <div class="media__body">
-      <h3 class="media__title">Easy start&managed Updates</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, repellat.</p>
-    </div>
+<blockquote class="quote">
+  <p class="quote__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores exercitationem optio quo quas. Animi id quidem quis libero itaque exercitationem!
+  </p>
+<footer><div class="media">
+  <div class="media__image">
+      <svg class="icon quote__line">
+        <use xlink:href="icons/sprite.svg#line"></use>
+      </svg>
   </div>
+  <div class="media__body">
+    <h3 class="media__title quote__author">John smith</h3>
+    <p class="quote__company">ABC company</p>
+  </div></footer>
+</blockquote>
 </body>
 </html>
