--- a/index.html
+++ b/index.html
@@ -10,11 +10,31 @@
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
 </head>
-<body>
-  <div class="grid grid--cols-3">
-    <div style="height: 100px; background: gold;"></div>
-    <div style="height: 100px; background: dodgerblue;"></div>
-    <div style="height: 100px; background: red;"></div>
+<body style="padding: 5rem;">
+  <div class="card testimonial">
+    <div class="grid grid--cols-2">
+      <div class="testimonial__image">
+        <img src="icons/testimonial.jpg"alt="a happy,smilling customer">
+        <span class="icon-container icon-container--accent">
+          <svg class="icon icont--white icon--smal">
+            <use xlink:href="icons/sprite.svg#quotes"></use>
+          </svg>
+      </div>
+      <blockquote class="quote">
+        <p class="quote__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores exercitationem optio quo quas. Animi id quidem quis libero itaque exercitationem!
+        </p>
+      <footer><div class="media">
+        <div class="media__image">
+            <svg class="icon quote__line">
+              <use xlink:href="icons/sprite.svg#line"></use>
+            </svg>
+        </div>
+        <div class="media__body">
+          <h3 class="media__title quote__author">John smith</h3>
+          <p class="quote__company">ABC company</p>
+        </div></footer>
+      </blockquote>
+    </div>
   </div>
 </body>
 </html>
