--- a/index.html
+++ b/index.html
@@ -10,31 +10,15 @@
     <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
 </head>
-<body style="padding: 5rem;">
-  <div class="card testimonial">
-    <div class="grid grid--cols-2">
-      <div class="testimonial__image">
-        <img src="icons/testimonial.jpg"alt="a happy,smilling customer">
-        <span class="icon-container icon-container--accent">
-          <svg class="icon icont--white icon--smal">
-            <use xlink:href="icons/sprite.svg#quotes"></use>
-          </svg>
-      </div>
-      <blockquote class="quote">
-        <p class="quote__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores exercitationem optio quo quas. Animi id quidem quis libero itaque exercitationem!
-        </p>
-      <footer><div class="media">
-        <div class="media__image">
-            <svg class="icon quote__line">
-              <use xlink:href="icons/sprite.svg#line"></use>
-            </svg>
-        </div>
-        <div class="media__body">
-          <h3 class="media__title quote__author">John smith</h3>
-          <p class="quote__company">ABC company</p>
-        </div></footer>
-      </blockquote>
-    </div>
+<body>
+<div class="callout callout--primary">
+  <div class="grid grid--cols-2">
+<div class="callout__content">
+  <h2 class="callout__heading">Ready to get started </h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ad architecto minima eaque cupiditate quos quibusdam quod ducimus? Culpa, voluptates.</p>
+</div>
+<a href="#" class="btn btn--secondary btn--long">Get started</a>
   </div>
+</div>
 </body>
 </html>
