--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<div class="callout callout--primary">
-  <div class="grid grid--cols-2">
-<div class="callout__content">
-  <h2 class="callout__heading">Ready to get started </h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ad architecto minima eaque cupiditate quos quibusdam quod ducimus? Culpa, voluptates.</p>
-</div>
-<a href="#" class="btn btn--secondary btn--long">Get started</a>
+  <div class="collapsible collapsible--expanded">
+    <header class="collapsible__header">
+      <h2 class="collapsible__heading">Item1</h2>
+        <svg class="icon collapsible__chevron">
+          <use xlink:href="icons/sprite.svg#chevron"></use>
+        </svg>
+    </header>
+    <div class="collapsible__contet">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, dolorem!
+    </div>
   </div>
-</div>
+  <script src="js/main.js"></script>
 </body>
 </html>
