--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
-</head>
-<body>
-
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+  </head>
+  <body>
+    <nav class="nav collapsible">
+<a href="/"><img src="icons/logo.svg" alt=""></a>
+<svg class="icon icon--white nav__toggler">
+  <use xlink:href="icons/sprite.svg#menu"></use>
+</svg>
+<ul class="list nav__list collapsible__contet">
+  <li class="nav__item"><a href="#">Hosting</a></li>
+  <li class="nav__item"><a href="#">vps</a></li>
+  <li class="nav__item"><a href="#">Domain</a></li>
+  <li class="nav__item"><a href="#">pricing</a></li>
+</ul>
+    </nav>
+    <script src="js/main.js"></script>
+  </body>
 </html>
